# codexAccountant

./: CHANGELOG.md  CLAUDE.md  CONTINUE_IMPLEMENTATION.md  CURRENT_STATUS.md  DEVELOPMENT_PLAN.md  DEVELOPMENT_ROADMAP.md  EXECUTIVE_SUMMARY.md  IMPLEMENTATION_LOG.md  IMPLEMENTATION_SUMMARY.md  NEXT_SESSION.md  PHASE_2_AUDIT_REPORT.md  PHASE_2_COMPLETE.md  PHASE_2_IMPLEMENTATION.md  PHASE_2_PROGRESS.md  PHASE_2_TASK_2_COMPLETE.md  PHASE_3_COMPLETE.md  PHASE_3_CONTINUATION_STATUS.md  PHASE_3_FINAL_COMPLETION.md  PHASE_3_IMPLEMENTATION.md  PHASE_3_PROGRESS.md  PHASE_3_QA_NOTES.md  PHASE_3_SUMMARY.md  QUICK_START_GUIDE.md  README_DEVELOPMENT.md  START_HERE.md  WEEK_1_TASKS.md  package-lock.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml
.code/agents/058ebcff-03de-4d30-9e68-0bb19b0943a0/: result.txt
.code/agents/0887126d-bfe2-4a38-9d41-a4c0747fdc50/: result.txt
.code/agents/12954/: exec-call_HjBPL1953QlyO1bUMaitw8EX.txt  exec-call_IIxWdhMUj5CuwdHIDu4nAJ4j.txt
.code/agents/13693/: exec-call_HeEkP03LbzuO0Fck3zMby0dh.txt
.code/agents/1501c673-31f6-4cd1-81cd-d488eaed9489/: result.txt
.code/agents/15133/: exec-call_hMWYCuWPlFj7vQ5uYaVNcV4P.txt
.code/agents/17196/: exec-call_9627LE8OyUIVEoxC9EPuYdV2.txt  exec-call_YJDwAcNaCaFmMoth2yYEmeLG.txt
.code/agents/17668/: exec-call_2dFu6m9ZNuOWkGDZLCaBKtvT.txt
.code/agents/18051/: exec-call_QtXVWASWiIQkcpIX195bRqC7.txt  exec-call_Sx6wSTUpNVdl4uJnwsUfX887.txt
.code/agents/18554/: exec-call_53QYTmAxUCP9lXQRiwo1swS9.txt  exec-call_63Qxi1ivvzaX7FR4bjcyqjJe.txt  exec-call_UvMi1SM80ICPYFaCt6XtOyZU.txt  exec-call_at3AajSDU1Dz1CBoxHYffLoI.txt  exec-call_bZSriqoNSpQqZpawG1jyiVgu.txt
.code/agents/19012/: exec-call_KycOOdZAkpbTNdzqcu9k8vZg.txt
.code/agents/19379/: exec-call_BSEMS3LGvjrdy6zMHPSG8J6h.txt  exec-call_KlnJ6rwufaEs5F3I8XouFtIv.txt
.code/agents/1c040bd9-ba43-4678-ac3b-212402af6a7c/: result.txt
.code/agents/2007/: exec-call_9T7EXPYLh6ZevVJaz6L2vtXx.txt  exec-call_LLhctzWilMcrdD9JEizkes35.txt
.code/agents/22d64b8f-0bfa-4ff9-ad0b-f3b4c972c56c/: result.txt
.code/agents/2512/: exec-call_eMz22ZVwEYXl4LYPapUP3wa9.txt
.code/agents/2767/: exec-call_PApUsmMjtZZTYOa9J7avI5NY.txt
.code/agents/282c8a83-a5d0-4504-85f6-3dfaefd18ae9/: result.txt
.code/agents/2af620b8-fff1-43ee-b99b-bb7e36630a2f/: result.txt
.code/agents/3128/: exec-call_E9rXRJ1XZvZV2jQZf2EBmHjX.txt
.code/agents/31fe776c-7886-4fe4-9732-0365167e1689/: result.txt
.code/agents/320d92a4-fc3f-4186-a76c-6778870aa2c7/: result.txt
.code/agents/3927ca46-07ff-4d7d-b597-3cab70bdc5a9/: result.txt
.code/agents/44608ed2-9965-4a9c-8c47-912b248120ef/: result.txt
.code/agents/45894898-99e7-42fd-bcef-b0025cc54997/: result.txt
.code/agents/4896925f-bc61-4131-8007-c744395a234b/: result.txt
.code/agents/4ff0b5fb-3139-4e82-884b-03e86aa4b269/: result.txt
.code/agents/58dbae9f-c291-4a96-93a5-3fceab3ba421/: result.txt
.code/agents/5dfdefcb-9e4e-4b8c-a887-aaccd3619c5d/: result.txt
.code/agents/61d69ffa-7627-4b37-8bc2-c9e20f9d5565/: result.txt
.code/agents/74e92d79-ea33-4cf2-bbae-515f277ce8d2/: result.txt
.code/agents/768c9e5d-168b-4089-8f0e-ddcd715bc121/: result.txt
.code/agents/7a19dedc-9670-4505-a5e4-42e93f190c7c/: result.txt
.code/agents/7e6c9df0-3173-4aa7-b87f-79a67bd110ad/: result.txt
.code/agents/85421424-8f3c-40a2-988d-2dd52841f6a6/: result.txt
.code/agents/9218fbc7-7d0a-41ad-93a2-47697f87043e/: result.txt
.code/agents/94c8dfe4-5086-4684-8a50-c357d3454803/: result.txt
.code/agents/973c7462-8875-4fcb-8f43-82c691c9eafb/: result.txt
.code/agents/98b184d7-defb-49a4-9a0d-eaa42df29d4b/: result.txt
.code/agents/9ad4ec31-1f09-4adc-87f1-15f8f6988543/: result.txt
.code/agents/9cc0a0fd-a9fe-4852-b57a-06b48eb8117e/: result.txt
apps/codex-gui/: .gitignore  README.md  dev-server.js  eslint.config.js  index.html  package.json  proxy-server.mjs  tsconfig.json  vite.config.ts
cli/tests/: ledger_reconciliation.rs
codex-rs/: Cargo.toml  README.md  justfile
codex-rs/app-server/: Cargo.toml
codex-rs/app-server/src/: accounting_handlers.rs  codex_message_processor.rs  lib.rs  message_processor.rs
codex-rs/app-server/tests/: accounting_api_test.rs
codex-rs/app-server/tests/common/: Cargo.toml  mcp_process.rs
codex-rs/app-server/tests/suite/: ledger_create_company.rs  mod.rs
codex-rs/cli/: Cargo.toml
codex-rs/codex-accounting-api/: Cargo.toml
codex-rs/codex-accounting-api/src/: controls.rs  convert.rs  demo.rs  duplicates.rs  facade.rs  lib.rs  preview_copy.rs  reconciliation.rs  telemetry.rs  tenancy.rs
codex-rs/codex-approvals/: Cargo.toml  README.md
codex-rs/codex-approvals/src/: lib.rs
codex-rs/codex-audit-log/: Cargo.toml  README.md
codex-rs/codex-audit-log/src/: lib.rs
codex-rs/codex-bank-ingest/: Cargo.toml  README.md
codex-rs/codex-bank-ingest/src/: lib.rs
codex-rs/codex-bank-ingest/tests/fixtures/csv/: profile.json  sample.csv
codex-rs/codex-bank-ingest/tests/fixtures/ofx/: sample.ofx
codex-rs/codex-doc-ingest/: Cargo.toml  README.md
codex-rs/codex-doc-ingest/src/: lib.rs
codex-rs/codex-doc-store/: Cargo.toml  README.md
codex-rs/codex-doc-store/src/: lib.rs
codex-rs/codex-ledger/: Cargo.toml  README.md
codex-rs/codex-ledger/src/: lib.rs  memory.rs
codex-rs/codex-ledger/tests/: ledger_service_contract.rs
codex-rs/codex-ocr/: Cargo.toml  README.md
codex-rs/codex-ocr/src/: lib.rs
codex-rs/codex-policy/: Cargo.toml  README.md
codex-rs/codex-policy/src/: lib.rs
codex-rs/codex-reconcile/: Cargo.toml  README.md
codex-rs/codex-reconcile/src/: lib.rs
codex-rs/codex-tenancy/: Cargo.toml
codex-rs/codex-tenancy/src/: in_memory.rs  lib.rs
codex-rs/core/: Cargo.toml
codex-rs/docs/: autonomous-accounting-phase0.md  autonomous-accounting-roadmap.md
codex-rs/scripts/: append-command-log.sh
codex-rs/specs/: autonomous-accounting-spec.md  stakeholder-review-checklist.md  tasks.md
codex-rs/tui/: Cargo.toml  styles.md
docs/: autonomous-accounting-phase0.md
docs/accounting/: architecture.md  cli.md
scripts/: BINDINGS_README.md  generate-bindings.ps1  generate-bindings.sh
(+114 files in other folders)
