[package]
edition = "2024"
name = "codex-bank-ingest"
version = { workspace = true }

[lib]
name = "codex_bank_ingest"
path = "src/lib.rs"

[lints]
workspace = true

[dependencies]
chrono = { workspace = true, features = ["serde"] }
csv = "1"
sha2 = "0.10"
serde = { workspace = true, features = ["derive"] }
thiserror = { workspace = true }

[dev-dependencies]
serde_json = { workspace = true }
pretty_assertions = { workspace = true }
