[package]
edition = "2024"
name = "codex-ocr"
version = { workspace = true }

[lib]
name = "codex_ocr"
path = "src/lib.rs"

[lints]
workspace = true

[dependencies]
anyhow = { workspace = true }
async-trait = { workspace = true }
serde = { workspace = true, features = ["derive"] }
thiserror = { workspace = true }
tokio = { workspace = true, features = ["macros", "rt-multi-thread", "sync"] }

[dev-dependencies]
pretty_assertions = { workspace = true }
